syntax="proto3";
package auth;
option java_package ="com.multimodule.webshop.proto.common";
option java_multiple_files=true;

message AuthCredentials{
  string username=1;
  string password=2;
}
